--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -47,20 +47,20 @@
 
             <!-- Contact Form-->
             
-                <center><form  action="/sendEmail" method="POST" meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <center><form action="/sendEmail" method="POST" meta name="viewport" content="width=device-width, initial-scale=3.0">
                     <div class="form-group">
                         <b><label for="exampleFormControlInput">Name</label></b>
-                        <input name="Name" type="Name" class="form-control" id="exampleFormControlInput" placeholder="John Doe">
+                        <input style= "background-color: antiquewhite;" name="Name" type="Name" class="form-control" id="exampleFormControlInput" placeholder="John Doe">
                     </div>
                     <div class="form-group">
                         <b><label for="exampleFormControlInput1">Email address</label></b>
-                        <input name="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        <input style= "background-color: antiquewhite;" name="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                     </div>
                     <div class="form-group">
                         <b><label for="exampleFormControlTextarea1">Message</label></b>
-                        <textarea name="message" class="form-control" id="exampleFormControlTextarea1" placeholder="Enter Your Message Here"rows="3"></textarea>
+                        <textarea  style= "background-color: antiquewhite;"name="message" class="form-control" id="exampleFormControlTextarea1" placeholder="Enter Your Message Here"rows="3"></textarea>
                     </div>
-                    <button type="submit" id="modalBtn" class="btn btn-light" font-size="40px">Submit</button>
+                    <button style = "background-color: #ABC663;" type="submit" id="modalBtn" class="btn btn-light" font-size="40px">Submit</button>
                     <p>
 
                     </p>
